# halcon

./: .dockerignore.validate  .env.example  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  ANALISIS_TUI_DETALLADO.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.validate  FASE_3.2_3.3_COMPLETE.md  FIXES_IMPLEMENTADOS.md  MIGRATION_STATUS.md  Makefile  README.md  SECURITY.md  deny.toml
crates/halcon-agent-core/: CERTIFICATION_REPORT.md  Cargo.toml  RISK_REPORT.md
crates/halcon-agent-core/src/: adversarial_simulation_tests.rs  confidence_hysteresis.rs  critic.rs  execution_budget.rs  failure_injection.rs  fsm.rs  fsm_formal_model.rs  goal.rs  info_theory_metrics.rs  invariant_coverage.rs  invariants.rs  lib.rs  long_horizon_tests.rs  loop_driver.rs  memory.rs  metrics.rs  orchestrator.rs  oscillation_metric.rs  planner.rs  regret_analysis.rs  replay_certification.rs  router.rs  stability_analysis.rs  strategy.rs  telemetry.rs  verifier.rs
crates/halcon-api/: Cargo.toml
crates/halcon-api/src/server/: auth.rs  mod.rs  router.rs  state.rs  ws.rs
crates/halcon-api/src/types/: agent.rs  chat.rs  mod.rs  task.rs  ws.rs
crates/halcon-api/tests/: api_types_tests.rs  rbac_integration_tests.rs
crates/halcon-cli/: Cargo.toml  build.rs
crates/halcon-cli/benches/: momoto_integration.rs  phase_45_features.rs  tui_performance.rs  tui_rendering.rs
crates/halcon-cli/src/: audit_sink_bootstrap.rs  config_loader.rs  lib.rs  main.rs
crates/halcon-cli/src/agent_bridge/: bridge_sink.rs  executor.rs  gdem_bridge.rs  mod.rs  traits.rs  types.rs
crates/halcon-cli/src/audit/: compliance.rs  events.rs  export_csv.rs  export_jsonl.rs  export_pdf.rs  integrity.rs  mod.rs  query.rs  summary.rs
crates/halcon-cli/src/commands/: agents.rs  audit.rs  auth.rs  auth_gate.rs  cenzontle.rs  chat.rs  config.rs  doctor.rs  init.rs  json_rpc.rs  lsp.rs  mcp.rs  mcp_serve.rs  mcp_server.rs  memory.rs  metrics.rs  mod.rs  plugin.rs  provider_factory.rs  schedule.rs  serve.rs  sso.rs  status.rs  theme.rs  tools.rs  trace.rs  update.rs  users.rs
crates/halcon-cli/src/render/: adaptive_optimizer.rs  adaptive_palette.rs  animations.rs  banner.rs  ci_sink.rs  color.rs  color_science.rs  components.rs  contrast_validator.rs  diff.rs  emotional_palette.rs  feedback.rs  intelligent_theme.rs  mod.rs  sentiment.rs  sink.rs  spinner.rs  stream.rs  temporal_color.rs  terminal_caps.rs  theme.rs  tool.rs
crates/halcon-cli/src/repl/: EXPERIMENTAL.md  adaptive_prompt.rs  agent.rs  agent_types.rs  agent_utils.rs  ambiguity_detector.rs  anomaly_detector.rs  authorization.rs  backpressure.rs  branch_divergence.rs  capability_index.rs  capability_orchestrator.rs  capability_resolver.rs  ci_detection.rs  clarification_gate.rs  code_instrumentation.rs  command_blacklist.rs  commands.rs  commit_reward_tracker.rs  compaction.rs  console.rs  context_manager.rs  conversational_permission.rs  delegation.rs  dev_ecosystem_integration_tests.rs  early_convergence.rs  edit_transaction.rs  env_repair.rs  evaluator.rs  evidence_pipeline.rs  execution_tracker.rs  executor.rs  failure_tracker.rs  feature_bundle.rs  git_event_listener.rs  goal_hierarchy.rs  hybrid_retriever.rs  ide_protocol_handler.rs  idempotency.rs  input_risk_classifier.rs  (+51 more)
crates/halcon-cli/src/tui/: activity_controller.rs  activity_model.rs  activity_navigator.rs  activity_renderer.rs  activity_types.rs  app.rs  clipboard.rs  constants.rs  conversational_overlay.rs  events.rs  highlight.rs  input.rs  input_state.rs  layout.rs  mod.rs  overlay.rs  permission_context.rs  platform.rs  state.rs  test_error_unlock.rs  theme_bridge.rs  transition_engine.rs
crates/halcon-cli/tests/: cli_e2e.rs  multi_provider_e2e.rs  orchestrator_e2e.rs  permission_e2e.rs  permission_system_integration.rs  provider_e2e.rs  sota_evaluation.rs
crates/halcon-cli/tests/common/: mod.rs
crates/halcon-client/: Cargo.toml
crates/halcon-client/src/: client.rs  config.rs  error.rs  lib.rs  stream.rs
crates/halcon-client/tests/: client_tests.rs
crates/halcon-context/: Cargo.toml
crates/halcon-context/benches/: context_engine.rs
crates/halcon-context/src/: accountant.rs  assembler.rs  cold_archive.rs  cold_store.rs  compression.rs  elider.rs  embedding.rs  hot_buffer.rs  instruction.rs  instruction_cache.rs  instruction_source.rs  lib.rs  pipeline.rs  repo_map.rs  segment.rs  semantic_cache.rs  semantic_store.rs  sliding_window.rs  vector_store.rs
crates/halcon-core/: Cargo.toml
crates/halcon-core/src/: context.rs  error.rs  lib.rs  security.rs
crates/halcon-core/src/traits/: chat_executor.rs  completion.rs  mcp.rs  metrics_sink.rs  mod.rs  observation.rs  planner.rs  provider.rs  provider_capabilities.rs  storage.rs
crates/halcon-core/src/types/: agent_state.rs  auth.rs  budget.rs  completion_trace.rs  config.rs  event.rs  execution_graph.rs  heuristics_config.rs  mod.rs  model.rs  orchestrator.rs  phase14.rs  policy_config.rs  provider_id.rs  (+9 more)
crates/halcon-desktop/: Cargo.toml
crates/halcon-desktop/src/: app.rs  config.rs  main.rs  state.rs  theme.rs
crates/halcon-integrations/: Cargo.toml
crates/halcon-integrations/src/: credential_store.rs  error.rs  events.rs  hub.rs  lib.rs  provider.rs
crates/halcon-multimodal/: Cargo.toml
crates/halcon-multimodal/src/: error.rs  lib.rs  metrics.rs  worker.rs
crates/halcon-providers/: Cargo.toml
crates/halcon-providers/src/: attempts.rs  contract.rs  echo.rs  error.rs  estimator.rs  http.rs  lib.rs  model_registry.rs  registry.rs  replay.rs
crates/halcon-providers/tests/: claude_code_integration.rs  live_provider_validation.rs
crates/halcon-runtime-events/: Cargo.toml
crates/halcon-runtime-events/src/: bus.rs  event.rs  graph_rebuilder.rs  lib.rs
crates/halcon-sandbox/: Cargo.toml
crates/halcon-sandbox/src/: executor.rs  lib.rs  policy.rs
crates/halcon-search/: Cargo.toml
crates/halcon-search/src/: config.rs  engine.rs  error.rs  evaluation.rs  lib.rs  types.rs
crates/halcon-security/: Cargo.toml
crates/halcon-security/src/: guardrails.rs  lib.rs  pii.rs  rbac.rs
(+736 files in other folders)
