[package]
name = "halcon-api"
description = "Control plane API types and server for Halcon runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:futures-util",
    "dep:halcon-auth",
    "dep:halcon-runtime",
    "dep:halcon-core",
    "dep:halcon-tools",
    "dep:halcon-storage",
    "dep:tracing",
    "dep:rand",
    "dep:dashmap",
    "dep:subtle",
    "dep:tokio-util",
    "dep:tokio-stream",
]

[dependencies]
# Always available (types)
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Server-only dependencies
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
rand = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }

# Workspace crates (server only)
halcon-auth = { workspace = true, optional = true }
halcon-runtime = { workspace = true, optional = true }
halcon-core = { workspace = true, optional = true }
halcon-storage = { workspace = true, optional = true }
halcon-tools = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
