[package]
name = "halcon-context"
description = "Context engine: instruction files, repo map, context assembly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }

# Exact BPE tokenization (Q1 — Sprint 1)
tiktoken-rs = { workspace = true }

# Local neural embeddings — optional feature (Q3 — Sprint 1)
# Enable with: cargo build --features fastembed
# Downloads ~23 MB model on first use; cached at $FASTEMBED_CACHE_PATH or ~/.cache/fastembed
fastembed = { version = "3", optional = true, default-features = false }

[features]
fastembed = ["dep:fastembed"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "context_engine"
harness = false
