[package]
name = "halcon-integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"

# Halcon crates
halcon-core = { path = "../halcon-core" }

# Optional features
reqwest = { version = "0.12", optional = true, features = ["json"] }
tokio-tungstenite = { version = "0.26", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
cron-parser = { version = "0.8", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
http = ["reqwest"]
websocket = ["tokio-tungstenite"]
webhook-server = ["axum", "tower"]
cron = ["cron-parser"]
full = ["http", "websocket", "webhook-server", "cron"]
