[package]
name = "halcon-providers"
description = "Model provider adapters: Anthropic, Ollama, OpenAI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }
halcon-storage = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "mock-claude"
path = "src/bin/mock_claude.rs"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true }
