[package]
name = "halcon-security"
description = "Cross-cutting security: PII detection, permissions, sanitization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
halcon-core = { workspace = true }

regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
